--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A pool score tracker, featuring users and matches",
   "main": "userSchema.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "mongoose": "^5.6.2"
   },
   "devDependencies": {},
